Added more localization, some small changes